syntax = "proto3";

option csharp_namespace = "AuctionService";

service GrpcAuction {
    rpc GetAuction (GetAuctionRequest) returns (GrpcAuctionResponse);
}

message GetAuctionRequest {
    string id = 1; //Position of 1
}

message GrpcAuctionModel {
    string id = 1; //Position 1 in the object
    string seller = 2; //Position 2 ....
    string auctionEnd = 3;
    int32 reservedPrice = 4;
}

message GrpcAuctionResponse {
    GrpcAuctionModel auction = 1;
}